k8s-configs/ping-cloud/base/pingcommon/cloud-generic/pingcloud-metadata/deployment.yaml
#
# This defines the pingcloud-metadata deployment.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingcloud-metadata
  labels:
    role: pingcloud-metadata
spec:
  selector:
    matchLabels:
      role: pingcloud-metadata
  template:
    metadata:
      name: pingcloud-metadata
      labels:
        role: pingcloud-metadata
    spec:
      serviceAccount: ping-serviceaccount
      containers:
      - name: pingcloud-metadata
        image: public.ecr.aws/r2h3l6e4/pingcloud-services/metadata:v1.16.3.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: "600Mi"
            cpu: "400m"
          requests:
            memory: "400Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
          timeoutSeconds: 3          
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
          timeoutSeconds: 3
        ports:
        - containerPort: 5000
