k8s-configs/ping-cloud/base/pingcommon/cloud-generic/pingcloud-metadata/ingress.yaml
# This defines the ingress for the metadata service

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metadata-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  ingressClassName: nginx-public
  tls:
  - hosts:
    - metadata.ping-demo.com
  rules:
  - host: metadata.ping-demo.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: metadata
            port:
              number: 5000
